# llama.kt

./: .gitignore  .gitmodules  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  build.gradle.kts  gradlew  settings.gradle.kts
docs/: plan-v1-llama-kt.md
example/: build.gradle.kts
example/src/main/: AndroidManifest.xml
example/src/main/java/com/tensai/llamakt/example/: MainActivity.kt
example/src/main/res/values/: themes.xml
llama-kt/: build.gradle.kts
llama-kt/src/main/cpp/: CMakeLists.txt  tensai_jni.cpp
llama-kt/src/main/cpp/common/: build-info.cpp
llama-kt/src/main/cpp/ggml-vulkan/: ggml-vulkan.cpp  ggml-vulkan.h
llama-kt/src/main/java/com/tensai/llamakt/: LlamaEngine.kt  LlamaEngineFlow.kt  TokenCallback.kt
patches/: 0001-vulkan-uma-descriptor-ceildiv.patch
scripts/: bootstrap.sh  build-opencl.sh
